# meeple

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml
docs/: RULES_TEMPLATE.md  TECH_DEBT.md
frontend/: README.md  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  Confirm.tsx  Lobby.tsx  MatchScreen.tsx  Overlay.tsx  api.ts  envelope.test.ts  envelope.ts  index.css  sound.ts  types.ts  useEscapeToClose.ts
frontend/src/games/: KahunaBoard.tsx  KuhnBoard.tsx  kahuna.css  kahunaSelect.ts  registry.tsx
meeple/: config.py  serve.py  test_config.py  test_serve.py
meeple/ai/: base.py  heuristic.py  random_agent.py  test_heuristic.py  test_random_agent.py
meeple/framework/: chance.py  game.py  openspiel_adapter.py  registry.py  spec.py  test_chance.py  test_openspiel_adapter.py  test_openspiel_parity.py  test_registry.py  test_spec.py  test_view.py  test_view_conformance.py  view.py
meeple/games/: __init__.py
meeple/games/kahuna/: RULES.md  determinize.py  engine.py  graph.py  heuristic.py  test_determinize.py  test_engine.py  test_graph.py  test_heuristic.py  test_view.py  view.py
meeple/games/kuhn/: RULES.md  engine.py  test_engine.py  test_view.py  view.py
meeple/web/: app.py  matches.py  schemas.py
