[project]
name = "meeple"
version = "0.1.0"
description = "MeepleMind — a game-agnostic board-game AI platform (engine, AI, eval, web), reused across games."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "torch>=2.0",
]

[project.optional-dependencies]
# Oracle-only, never a game backend (CLAUDE.md G6) — install on demand.
openspiel = ["open-spiel>=1.5"]
web = ["fastapi>=0.110", "uvicorn>=0.30"]

[project.scripts]
meeple = "meeple.cli:main"

[dependency-groups]
dev = [
    "deptry>=0.20",
    "import-linter>=2.0",
    "open-spiel>=1.5",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "vulture>=2.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meeple"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.pytest.ini_options]
testpaths = ["meeple"]
addopts = "--cov=meeple --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.vulture]
paths = ["meeple"]
min_confidence = 80

[tool.deptry]
known_first_party = ["meeple"]

[tool.deptry.per_rule_ignores]
# fastapi/uvicorn are optional extras (web), not used until Phase 9.
DEP002 = ["fastapi", "uvicorn"]
# pytest/open-spiel are dev-only but imported from co-located test_*.py files,
# which deptry doesn't auto-detect as tests outside a tests/ directory.
DEP004 = ["pytest", "open-spiel"]

[tool.importlinter]
root_package = "meeple"

[[tool.importlinter.contracts]]
name = "Seam: ai/eval/web import only framework (never games)"
type = "forbidden"
source_modules = ["meeple.ai", "meeple.eval", "meeple.web"]
forbidden_modules = ["meeple.games"]

[[tool.importlinter.contracts]]
name = "Seam: games import only framework (never ai/eval/web)"
type = "forbidden"
source_modules = ["meeple.games"]
forbidden_modules = ["meeple.ai", "meeple.eval", "meeple.web"]
